--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 	},
 	"dependencies": {
 		"core-js": "^3.6.4",
+		"esm": "^3.2.25",
+		"express": "^4.17.1",
 		"vue": "^2.6.11",
 		"vue-router": "^3.1.6",
 		"vuex": "^3.1.3"
