--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
+		"body-parser": "^1.19.0",
 		"core-js": "^3.6.4",
 		"esm": "^3.2.25",
 		"express": "^4.17.1",
@@ -22,6 +23,7 @@
 		"babel-eslint": "^10.0.3",
 		"eslint": "^6.7.2",
 		"eslint-plugin-vue": "^6.1.2",
+		"nodemon": "^2.0.2",
 		"vue-template-compiler": "^2.6.11"
 	},
 	"eslintConfig": {
