--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
 	"scripts": {
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint"
+		"lint": "vue-cli-service lint",
+		"dev:server": "nodemon --watch server/ server.js",
+		"dev:server-inspect": "nodemon --inspect --watch server/ server.js"
 	},
 	"dependencies": {
 		"body-parser": "^1.19.0",
+		"connect-mongo": "^3.2.0",
 		"core-js": "^3.6.4",
 		"esm": "^3.2.25",
 		"express": "^4.17.1",
+		"express-session": "^1.17.0",
+		"mongodb": "^3.5.5",
 		"vue": "^2.6.11",
 		"vue-router": "^3.1.6",
 		"vuex": "^3.1.3"
